appId: com.onebrain.dabbler
---
- launchApp:
    clearState: false
- tapOn: "Forgot Password"
- inputText: "test@onebrain.app"
- tapOn:
    text: "Send"
- assertVisible:
    text: "email"
